Личный проект: оживляем интерактивные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
         </h1>
 
         <div class="header-info__contacts header-contacts">
-          <span class="header-contacts__phone">+7 (812) 555-05-55</span>
+          <a href="tel:+78125550555" class="header-contacts__phone">+7 (812) 555-05-55</a>
           <span class="header-contacts__address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </div>
         
@@ -494,5 +494,7 @@
     </div>
     <button class="add-popup__close" type="button">Закрыть</button>
   </section>
+
+  <script src="/js/script.js"></script>
 </body>
 </html>
