--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
               к вашему подъезду совершенно бесплатно!
               Ведь мы неплохо заработаем, <br>
               поднимая его на ваш этаж!
+            </p>
           </div>
           <div class="services__tab services-tab" data-tab="2">
             <h3 class="services-tab__heading">Гарантия</h3>
@@ -353,7 +354,8 @@
           <div class="company__contacts company-contacts">
             <h2 class="company-contacts__heading">Контакты</h2>
             <p class="company-contacts__text text">Вы можете забрать товар сами, <br>
-              заехав в наш офис:</p>
+              заехав в наш офис:
+            </p>
             <img class="company-contacts__map" src="img/map.jpg" width="300" height="158" alt="Карта c нашим адресом: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
             <a class="company-contacts__button button" href="writeus.html">
               Заблудились? Напишите нам!
@@ -462,7 +464,6 @@
             <div class="writeus-popup__item">
               <label class="writeus-popup__label" for="write-us-message">Текст письма:</label>
               <textarea class="writeus-popup__input message" name="message" id="write-us-message" cols="30" rows="5" placeholder="В свободной форме"></textarea>
-              <!-- <input class="writeus-popup__input message" type="text" name="message" placeholder="В свободной форме" id="write-us-message"> -->
             </div>
           </div>
 
@@ -494,6 +495,6 @@
     </section>
 
     <script src="js/script.js"></script>
-    </body>
+  </body>
 </html>
 
