--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body>
@@ -394,17 +394,17 @@
         </div>
       </div>
 
-        <section class="catalog-page__description catalog-description">
-          <div class="wrap">
-            <h2 class="catalog-description__headin">Пара слов о перфораторах</h2>
+      <section class="catalog-page__description catalog-description">
+        <div class="wrap">
+          <h2 class="catalog-description__headin">Пара слов о перфораторах</h2>
 
-            <p class="catalog-description__text text">
-              Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
-              Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
-              В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-            </p>
-          </div>
-        </section>
+          <p class="catalog-description__text text">
+            Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
+            Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+            В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+          </p>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -498,6 +498,6 @@
       <button class="add-popup__close" type="button">Закрыть</button>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
