--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body>
     <header class="header">
       <div class="header__menu header-menu">
         <div class="wrap">
-          <a class="header-menu__logo  logo" href="#">
+          <a class="header-menu__logo  logo">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="109" height="19" viewBox="0 0 136.5 21.59">
               <defs>
                 <style>
@@ -369,7 +369,7 @@
       <div class="footer__top footer-top">
         <div class="wrap">
           <div class="footer-top__inner">
-            <a class="footer-top__logo logo" href="#">
+            <a class="footer-top__logo logo">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="138" height="22" viewBox="0 0 136.5 21.59">
                 <defs>
                   <style>
@@ -494,7 +494,7 @@
       <button class="add-popup__close" type="button">Закрыть</button>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
 
